--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ fighting_daisy = "0.2.0"
 include_directory = "0.1.1"
 maud = "0.27.0"
 rocket = { version = "=0.5.1", features = ["json"] }
+serde = "1.0.219"
+serde_derive = "1.0.219"
+uuid = { version = "1.16.0", features = ["v4"] }
